kubernetes/cluster_setup/smartapp/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "dev.smartapp.saidurkubermajhi.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-service
                port:
                  number: 5000
